--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -12,17 +12,17 @@
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
-      <link rel="icon" href="/assets/images/tablogo.png" type="image/png"/> <!-- Corrected Path -->
+      <link rel="icon" href="../assets/images/tablogo.png" type="image/png"/>
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="/css/bootstrap.min.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" href="/css/style.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="/css/responsive.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="/assets/images/fevicon.png" type="image/gif" /> <!-- Corrected Path -->
+      <link rel="icon" href="../assets/images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -36,7 +36,7 @@
    <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="/assets/images/loading.gif" alt="#"/></div> <!-- Corrected Path -->
+         <div class="loader"><img src="../assets/images/loading.gif" alt="#"/></div>
       </div> 
       <!-- end loader -->
       <!-- header -->
@@ -49,9 +49,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="/">
-                                 <img src="/assets/images/logo.png" alt="#" /> <!-- Corrected Path -->
-                              </a>
+                              <a href="../index.html"><img src="../assets/images/logo.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -64,25 +62,25 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item ">
-                                 <a class="nav-link" href="/">Home</a> <!-- Corrected Link -->
+                                 <a class="nav-link" href="../index.html">Home</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/about">About</a> <!-- Corrected Link -->
+                                 <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/apartments">Our Apartments</a> <!-- Corrected Link -->
+                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/gallery">Gallery</a> <!-- Corrected Link -->
+                                 <a class="nav-link" href="gallery.html">Gallery</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/testimonial">testimonial</a> <!-- Corrected Link -->
+                                 <a class="nav-link" href="testimonial.html">testimonial</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/contact">Contact Us</a> <!-- Corrected Link -->
+                                 <a class="nav-link" href="contact.html">Contact Us</a>
                               </li>
                               <li class="nav-item active">
-                                <a class="nav-link" href="/admin">Admin</a> <!-- Corrected Link -->
+                                <a class="nav-link" href="admin.html">Admin</a>
                              </li>
                            </ul>
                         </div>
@@ -165,12 +163,12 @@
                   <div class="col-md-4">
                      <h3>Menu Link</h3>
                      <ul class="link_menu">
-                        <li class="active"><a href="/">Home</a></li> <!-- Corrected link -->
-                        <li><a href="/about">About</a></li> <!-- Corrected link -->
-                        <li><a href="/apartments">Our Apartments</a></li> <!-- Corrected link -->
-                        <li><a href="/gallery">Gallery</a></li> <!-- Corrected link -->
-                        <li><a href="/testimonial">testimonial</a></li> <!-- Corrected link -->
-                        <li><a href="/contact">Contact Us</a></li> <!-- Corrected link -->
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="html/about.html"> about</a></li>
+                        <li><a href="html/apartments.html">Our Apartments</a></li>
+                        <li><a href="html/gallery.html">Gallery</a></li>
+                        <li><a href="html/testimonial.html">testimonial</a></li>
+                        <li><a href="html/contact.html">Contact Us</a></li>
                      </ul>
                   </div>
                   <div class="col-md-4">
@@ -200,13 +198,13 @@
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="/js/jquery.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/bootstrap.bundle.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/jquery-3.0.0.min.js"></script> <!-- Corrected Path -->
+      <script src="../js/jquery.min.js"></script>
+      <script src="../js/bootstrap.bundle.min.js"></script>
+      <script src="../js/jquery-3.0.0.min.js"></script>
       <!-- sidebar -->
-      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/custom.js"></script> <!-- Corrected Path -->
-      <script src="/js/modal.js"></script> <!-- Corrected Path -->
-      <script src="/js/hide-show.js"></script> <!-- Corrected Path -->
+      <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="../js/custom.js"></script>
+      <script src="../js/modal.js"></script>
+      <script src="../js/hide-show.js"></script>
    </body>
 </html>
