--- a/UI/html/gallery.html
+++ b/UI/html/gallery.html
@@ -12,17 +12,17 @@
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
-      <link rel="icon" href="/assets/images/tablogo.png" type="image/png"/> <!-- Corrected Path -->
+      <link rel="icon" href="../assets/images/tablogo.png" type="image/png"/>
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="/css/bootstrap.min.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" href="/css/style.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="/css/responsive.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="/assets/images/fevicon.png" type="image/gif" /> <!-- Corrected Path -->
+      <link rel="icon" href="../assets/images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -34,7 +34,7 @@
    <body class="main-layout inner_page">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="/assets/images/loading.gif" alt="#"/></div> <!-- Corrected Path -->
+         <div class="loader"><img src="../assets/images/loading.gif" alt="#"/></div>
       </div>
       <!-- end loader -->
       <!-- header -->
@@ -47,9 +47,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="/">
-                                 <img src="/assets/images/logo.png" alt="#" /> <!-- Corrected Path -->
-                              </a>
+                              <a href="../index.html"><img src="../assets/images/logo.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -62,22 +60,22 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item ">
-                                 <a class="nav-link" href="/">Home</a> <!-- Changed to clean URL -->
+                                 <a class="nav-link" href="../index.html">Home</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/about">About</a> <!-- Changed to clean URL -->
+                                 <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/apartments">Our Apartments</a> <!-- Changed to clean URL -->
+                                 <a class="nav-link" href="apartments.html">Our Apartments</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="/gallery">Gallery</a> <!-- Changed to clean URL -->
+                                 <a class="nav-link" href="gallery.html">Gallery</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/testimonial">testimonial</a> <!-- Changed to clean URL -->
+                                 <a class="nav-link" href="testimonial.html">testimonial</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/contact">Contact Us</a> <!-- Changed to clean URL -->
+                                 <a class="nav-link" href="contact.html">Contact Us</a>
                               </li>
                            </ul>
                         </div>
@@ -107,107 +105,107 @@
    <div class="container">
        <div class="row">
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/2.webp" data-lightbox="gallery" data-title="Image 1"> <!-- Corrected Path -->
+               <a href="../assets/images/2.webp" data-lightbox="gallery" data-title="Image 1">
                    <figure>
-                       <img src="/assets/images/2.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/2.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/6.webp" data-lightbox="gallery" data-title="Image 2"> <!-- Corrected Path -->
+               <a href="../assets/images/6.webp" data-lightbox="gallery" data-title="Image 2">
                    <figure>
-                       <img src="/assets/images/6.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/6.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/32.jpg" data-lightbox="gallery" data-title="Image 3"> <!-- Corrected Path -->
+               <a href="../assets/images/32.jpg" data-lightbox="gallery" data-title="Image 3">
                    <figure>
-                       <img src="/assets/images/32.jpg" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/32.jpg" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/3.webp" data-lightbox="gallery" data-title="Image 4"> <!-- Corrected Path -->
+               <a href="../assets/images/3.webp" data-lightbox="gallery" data-title="Image 4">
                    <figure>
-                       <img src="/assets/images/3.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/3.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/4.webp" data-lightbox="gallery" data-title="Image 5"> <!-- Corrected Path -->
+               <a href="../assets/images/4.webp" data-lightbox="gallery" data-title="Image 5">
                    <figure>
-                       <img src="/assets/images/4.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/4.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/13.webp" data-lightbox="gallery" data-title="Image 6"> <!-- Corrected Path -->
+               <a href="../assets/images/13.webp" data-lightbox="gallery" data-title="Image 6">
                    <figure>
-                       <img src="/assets/images/13.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/13.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/31.webp" data-lightbox="gallery" data-title="Image 7"> <!-- Corrected Path -->
+               <a href="../assets/images/31.webp" data-lightbox="gallery" data-title="Image 7">
                    <figure>
-                       <img src="/assets/images/31.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/31.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/25.jpg" data-lightbox="gallery" data-title="Image 8"> <!-- Corrected Path -->
+               <a href="../assets/images/25.jpg" data-lightbox="gallery" data-title="Image 8">
                    <figure>
-                       <img src="/assets/images/25.jpg" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/25.jpg" alt="#"/>
+                   </figure>
+               </a>
+           </div>
+           <div class="col-md-4 col-sm-6 galcolor: red;lery-item">
+               <a href="../assets/images/12.webp" data-lightbox="gallery" data-title="Image 9">
+                   <figure>
+                       <img src="../assets/images/12.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/12.webp" data-lightbox="gallery" data-title="Image 9"> <!-- Corrected Path -->
+               <a href="../assets/images/9.webp" data-lightbox="gallery" data-title="Image 10">
                    <figure>
-                       <img src="/assets/images/12.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/9.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/9.webp" data-lightbox="gallery" data-title="Image 10"> <!-- Corrected Path -->
+               <a href="../assets/images/10.webp" data-lightbox="gallery" data-title="Image 11">
                    <figure>
-                       <img src="/assets/images/9.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/10.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/10.webp" data-lightbox="gallery" data-title="Image 11"> <!-- Corrected Path -->
+               <a href="../assets/images/5.webp" data-lightbox="gallery" data-title="Image 12">
                    <figure>
-                       <img src="/assets/images/10.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/5.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/5.webp" data-lightbox="gallery" data-title="Image 12"> <!-- Corrected Path -->
+               <a href="../assets/images/26.jpg" data-lightbox="gallery" data-title="Image 13">
                    <figure>
-                       <img src="/assets/images/5.webp" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/26.jpg" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/26.jpg" data-lightbox="gallery" data-title="Image 13"> <!-- Corrected Path -->
+               <a href="../assets/images/1.webp" data-lightbox="gallery" data-title="Image 14">
                    <figure>
-                       <img src="/assets/images/26.jpg" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/1.webp" alt="#"/>
                    </figure>
                </a>
            </div>
            <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/1.webp" data-lightbox="gallery" data-title="Image 14"> <!-- Corrected Path -->
+               <a href="../assets/images/20.jpg" data-lightbox="gallery" data-title="Image 15">
                    <figure>
-                       <img src="/assets/images/1.webp" alt="#"/> <!-- Corrected Path -->
-                   </figure>
-               </a>
-           </div>
-           <div class="col-md-4 col-sm-6 gallery-item">
-               <a href="/assets/images/20.jpg" data-lightbox="gallery" data-title="Image 15"> <!-- Corrected Path -->
-                   <figure>
-                       <img src="/assets/images/20.jpg" alt="#"/> <!-- Corrected Path -->
+                       <img src="../assets/images/20.jpg" alt="#"/>
                    </figure>
                </a>
            </div>
@@ -239,12 +237,12 @@
                  <div class="col-md-4">
                     <h3>Menu Link</h3>
                     <ul class="link_menu">
-                       <li class="active"><a href="/">Home</a></li> <!-- Corrected link -->
-                       <li><a href="/about">About</a></li> <!-- Corrected link -->
-                       <li><a href="/apartments">Our Apartments</a></li> <!-- Corrected link -->
-                       <li><a href="/gallery">Gallery</a></li> <!-- Corrected link -->
-                       <li><a href="/testimonial">testimonial</a></li> <!-- Corrected link -->
-                       <li><a href="/contact">Contact Us</a></li> <!-- Corrected link -->
+                       <li class="active"><a href="#">Home</a></li>
+                       <li><a href="html/about.html"> about</a></li>
+                       <li><a href="html/apartments.html">Our Apartments</a></li>
+                       <li><a href="html/gallery.html">Gallery</a></li>
+                       <li><a href="html/testimonial.html">testimonial</a></li>
+                       <li><a href="html/contact.html">Contact Us</a></li>
                     </ul>
                  </div>
                  <div class="col-md-4">
@@ -274,11 +272,11 @@
      </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="/js/jquery.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/bootstrap.bundle.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/jquery-3.0.0.min.js"></script> <!-- Corrected Path -->
+      <script src="../js/jquery.min.js"></script>
+      <script src="../js/bootstrap.bundle.min.js"></script>
+      <script src="../js/jquery-3.0.0.min.js"></script>
       <!-- sidebar -->
-      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/custom.js"></script> <!-- Corrected Path -->
+      <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="../js/custom.js"></script>
    </body>
 </html>
