--- a/UI/html/modify-Apartment.html
+++ b/UI/html/modify-Apartment.html
@@ -12,17 +12,17 @@
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="Yves Byiringiro" content="">
-      <link rel="icon" href="/assets/images/tablogo.png" type="image/png"/> <!-- Corrected Path -->
+      <link rel="icon" href="../assets/images/tablogo.png" type="image/png"/>
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="/css/bootstrap.min.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" href="/css/style.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="/css/responsive.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="/assets/images/fevicon.png" type="image/gif" /> <!-- Corrected Path -->
+      <link rel="icon" href="../assets/images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -30,14 +30,14 @@
          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->   
-      <link rel="stylesheet" href="/css/admic-nav-bar.css"> <!-- Corrected Path -->
+      <link rel="stylesheet" href="../css/admic-nav-bar.css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
    </head>
    <!-- body -->
    <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="/assets/images/loading.gif" alt="#"/></div> <!-- Corrected Path -->
+         <div class="loader"><img src="../assets/images/loading.gif" alt="#"/></div>
       </div>
       <!-- end loader -->
       <!-- header -->
@@ -50,9 +50,7 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="/admin-dashboard">
-                                 <img src="/assets/images/logo.png" alt="#" /> <!-- Corrected Path -->
-                              </a>
+                              <a href="admin-dashboard.html"><img src="../assets/images/logo.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -65,32 +63,32 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/admin-dashboard">
+                                    <a class="nav-link" href="admin-dashboard.html">
                                         <i class="fas fa-home"></i> Home
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/people">
+                                    <a class="nav-link" href="people.html">
                                         <i class="fas fa-bullhorn"></i> Advertise
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/booking">
+                                    <a class="nav-link" href="booking.html">
                                         <i class="fas fa-calendar-alt"></i> Booking
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/testimonial-admin">
+                                    <a class="nav-link" href="testimonial-admin.html">
                                         <i class="fas fa-comment-alt"></i> Testimonial
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/co-admins">
+                                    <a class="nav-link" href="co-admins.html">
                                         <i class="fas fa-users"></i> Accounts Manager
                                     </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="/modify-Apartment">
+                                    <a class="nav-link" href="modify-Apartment.html">
                                         <i class="fas fa-edit"></i> Modify Properties
                                     </a>
                                 </li>
@@ -171,12 +169,12 @@
                   <div class="col-md-4">
                      <h3>Menu Link</h3>
                      <ul class="link_menu">
-                        <li class="active"><a href="/">Home</a></li> <!-- Corrected Link -->
-                        <li><a href="/about">About</a></li> <!-- Corrected Link -->
-                        <li><a href="/apartments">Our Apartments</a></li> <!-- Corrected Link -->
-                        <li><a href="/gallery">Gallery</a></li> <!-- Corrected Link -->
-                        <li><a href="/testimonial">testimonial</a></li> <!-- Corrected Link -->
-                        <li><a href="/contact">Contact Us</a></li> <!-- Corrected Link -->
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="html/about.html"> about</a></li>
+                        <li><a href="html/apartments.html">Our Apartments</a></li>
+                        <li><a href="html/gallery.html">Gallery</a></li>
+                        <li><a href="html/testimonial.html">testimonial</a></li>
+                        <li><a href="html/contact.html">Contact Us</a></li>
                      </ul>
                   </div>
                   <div class="col-md-4">
@@ -206,12 +204,12 @@
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="/js/jquery.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/bootstrap.bundle.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/jquery-3.0.0.min.js"></script> <!-- Corrected Path -->
+      <script src="../js/jquery.min.js"></script>
+      <script src="../js/bootstrap.bundle.min.js"></script>
+      <script src="../js/jquery-3.0.0.min.js"></script>
       <!-- sidebar -->
-      <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script> <!-- Corrected Path -->
-      <script src="/js/custom.js"></script> <!-- Corrected Path -->
+      <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="../js/custom.js"></script>
       <script>
          const isProduction = window.location.hostname === 'gogovillas.com' || window.location.hostname === 'www.gogovillas.com';
          // Set the base URL accordingly
@@ -228,7 +226,7 @@
         
             try {
                 const response = await fetch(`${API_BASE_URL}/apartments/update/${encodeURIComponent(apartmentName)}`, {
-                    method: 'PATCH', // Changed to PATCH as per RESTful update
+                    method: 'PUT',
                     body: formData
                 });
         
@@ -238,8 +236,7 @@
                     document.getElementById('responseMessage').textContent = 'Apartment details updated successfully.';
                     document.getElementById('responseMessage').style.color = 'green';
                 } else {
-                    document.querySelector('.admin-error-message').textContent = result.error || 'An error occurred while updating the apartment details.';
-                    document.querySelector('.admin-error-message').style.display = 'block';
+                    throw new Error(result.error || 'An error occurred while updating the apartment details.');
                 }
             } catch (error) {
                 document.querySelector('.admin-error-message').textContent = error.message;
