--- a/UI/html/Karisimbi Apartment.html
+++ b/UI/html/Karisimbi Apartment.html
@@ -94,7 +94,7 @@
             <div class="align-items-center">
                 <p class="availability-message text-danger"></p>
                 <div class="price-box" style="border-radius: 5px;">
-                    <p class="price"><span class="final-price" id="final-price">US$</span><span class="nights"> / nights</span></p>
+                    <p class="price"><span class="final-price" id="final-price">RWF</span><span class="nights"> / nights</span></p>
                 </div>
                 <!-- <a href="userdata.html" class="btn btn-danger">Book This Apartment</a> -->
                 <a href="userdata.html" id="book-now-link" class="btn btn-danger">Book This Apartment</a>
