--- a/UI/html/thankyou.html
+++ b/UI/html/thankyou.html
@@ -413,7 +413,7 @@
              </div>
             <div class="thank-you-footer-section">
                <h4>Visit Our Website</h4>
-               <a href="admin-dashboard.html" class="visit-website-button">Visit Website</a>
+               <a href="../index.html" class="visit-website-button">Visit Website</a>
             </div>
          </div>
       </footer>
