--- a/UI/html/userdata.html
+++ b/UI/html/userdata.html
@@ -264,7 +264,8 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                    <h2>Payment</h2>
+                    <h2>Personal Info</h2>
+                    <h1>Note that you will be paying at the property</h1>
                   </div>
                </div>
             </div>
