--- a/UI/html/bookingdetails.html
+++ b/UI/html/bookingdetails.html
@@ -818,7 +818,7 @@ body.custom-modal-open {
             </div>
             <div class="page-footer-section">
                <h4>Visit Our Website</h4>
-               <a href="admin-dashboard.html" class="visit-website-button">Visit Website</a>
+               <a href="../index.html" class="visit-website-button">Visit Website</a>
             </div>
          </div>
       </footer>
